<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_toast"
        android:backgroundTint="#3DCE0C"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Count di kanan Toast -->
    <Button
        android:id="@+id/button_count2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_count"
        android:backgroundTint="#3DCE0C"
        app:layout_constraintTop_toTopOf="@id/button_toast"
        app:layout_constraintStart_toEndOf="@id/button_toast"
        android:layout_marginStart="50dp"/>

    <!-- Browser di kanan Count (opsional bisa juga di bawah) -->
    <Button
        android:id="@+id/button_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_browser"
        android:backgroundTint="#3DCE0C"
        app:layout_constraintTop_toTopOf="@id/button_toast"
        app:layout_constraintStart_toEndOf="@id/button_count2"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/show_count2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/count_initial_value"
        android:textSize="160sp"
        android:gravity="center"
        android:background="#FFFF00"
        app:layout_constraintTop_toBottomOf="@id/button_toast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_label_pindah"
        android:backgroundTint="#3DCE0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
